# tinyobs

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  justfile
.agents/skills/tinyobs-api/: SKILL.md
.agents/skills/tinyobs-backend/: SKILL.md
.agents/skills/tinyobs-cli-mcp/: SKILL.md
.agents/skills/tinyobs-docker/: SKILL.md
configuration/: base.toml  local.toml  production.toml
crates/tinyobs-core/: Cargo.toml
crates/tinyobs-core/src/: ingest.rs  lib.rs
crates/tinyobs-core/src/backend/: mod.rs  types.rs
crates/tinyobs-lite/: Cargo.toml  Dockerfile
crates/tinyobs-lite/migrations/: 01_spans.sql  02_logs_metrics.sql
crates/tinyobs-lite/src/: config.rs  ingest.rs  lib.rs  startup.rs  telemetry.rs
crates/tinyobs-lite/src/compaction/: basic.rs  merge.rs  mod.rs  retention.rs
crates/tinyobs-lite/src/db/: read.rs  write.rs
crates/tinyobs-pro/: Cargo.toml
crates/tinyobs-pro/docker/: Dockerfile  clickhouse-init.sql
crates/tinyobs-pro/src/: clickhouse.rs  config.rs  ingest.rs  lib.rs
examples/: axum_app.rs  basic.rs  custom_tables.rs  standalone.rs
skills/tinyobs-library/: SKILL.md
skills/tinyobs-tracing/: SKILL.md
src/: api_types.rs  ch.rs  cli.rs  client.rs  config.rs  ingest.rs  lib.rs  mcp.rs  schema.rs  server.rs  startup.rs  telemetry.rs
src/backend/: mod.rs  types.rs
src/compaction/: basic.rs  merge.rs  mod.rs  retention.rs
src/db/: mod.rs  read.rs  write.rs
src/transport/: chdb.rs  mod.rs  remote.rs
tinyobs-pro/docker/: Dockerfile  entrypoint.sh
