[workspace]
members = [
    "crates/tinyobs-core",
    "crates/tinyobs-lite",
    "crates/tinyobs-pro",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/Yokeshthirumoorthi/tinyobs"

[workspace.dependencies]
# Shared across crates
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tokio = { version = "1.41", features = ["full"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
async-trait = "0.1"

# OpenTelemetry
opentelemetry-proto = { version = "0.6", features = ["gen-tonic", "trace", "logs", "metrics", "with-serde"] }
prost = "0.12"
hex = "0.4"

# Telemetry
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-bunyan-formatter = "0.3"

# Configuration
config = "0.14"
toml = "0.8"

# Internal crates
tinyobs-core = { path = "crates/tinyobs-core" }
