[package]
name = "tinyobs"
description = "Shared types, traits, transports, and OTLP parsing for tinyobs"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/Yokeshthirumoorthi/tinyobs"

[lib]
path = "src/lib.rs"

[[bin]]
name = "tinyobs-server"
path = "src/bin/tinyobs-server.rs"
required-features = ["lite"]

[[bin]]
name = "tinyobs-pro-server"
path = "src/bin/tinyobs-pro-server.rs"
required-features = ["pro"]

[[bin]]
name = "tinyobs-cli"
path = "src/bin/tinyobs-cli.rs"
required-features = ["cli"]

[[bin]]
name = "tinyobs-mcp"
path = "src/bin/tinyobs-mcp.rs"
required-features = ["mcp"]

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# Async / errors
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tokio = { version = "1.41", features = ["full"] }
async-trait = "0.1"

# Web framework (for ingest types in server.rs)
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }

# OpenTelemetry
opentelemetry-proto = { version = "0.6", features = ["gen-tonic", "trace", "logs", "metrics", "with-serde"] }
prost = "0.12"
hex = "0.4"

# Telemetry
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-bunyan-formatter = "0.3"

# Configuration
config = "0.14"
toml = "0.8"

# Transport: chdb (optional, for lite)
chdb-rust = { version = "1.1", optional = true }

# Transport: remote ClickHouse (optional, for pro)
clickhouse = { version = "0.14", features = ["lz4", "inserter"], optional = true }
reqwest = { version = "0.12", features = ["json"], optional = true }

# CLI
clap = { version = "4", features = ["derive"], optional = true }

# MCP server
rmcp = { version = "1.2", features = ["server", "macros", "transport-io", "schemars"], optional = true }

[features]
default = ["lite"]
lite = ["dep:chdb-rust"]
pro = ["dep:clickhouse", "dep:reqwest"]
client = ["dep:reqwest"]
cli = ["client", "dep:clap"]
mcp = ["client", "dep:rmcp"]

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
