[package]
name = "tinyobs-pro"
description = "TinyObs Pro: ClickHouse-backed observability storage with direct OTLP ingest"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "tinyobs-pro-server"
path = "src/bin/server.rs"

[dependencies]
tinyobs-core = { workspace = true }

# Web framework
axum = { workspace = true }
tower-http = { workspace = true }

# Async runtime
tokio = { workspace = true }

# ClickHouse client (typed inserts with LZ4 compression)
clickhouse = { version = "0.14", features = ["lz4", "inserter"] }
# HTTP client (for JSON queries)
reqwest = { version = "0.12", features = ["json"] }

# OpenTelemetry (for handler types)
opentelemetry-proto = { workspace = true }
prost = { workspace = true }
hex = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# Time & errors
chrono = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }

# Telemetry
tracing-subscriber = { workspace = true }
tracing-bunyan-formatter = { workspace = true }

# Configuration
config = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
